Added setup / delete tasks and config file support